Bug 297238 incorrect parameter specification for signal open-uri of gtkembedmoz patch by chpe@gnome.org r=mpgritti sr=roc