embedding/browser/gtk/src/EmbedProgress.cpp
@@ -97,7 +97,7 @@ EmbedProgress::OnStateChange(nsIWebProgress *aWebProgress,
   }
   gtk_signal_emit(GTK_OBJECT(mOwner->mOwningWidget),
 		  moz_embed_signals[NET_STATE_ALL],
-		  (gpointer)(const char *)uriString,
+		  (const char *)uriString,
 		  (gint)aStateFlags, (gint)aStatus);
   // and for stop, too
   if ((aStateFlags & GTK_MOZ_EMBED_FLAG_IS_NETWORK) && 
